# debug-ci

./: Dockerfile  README.md
.github/workflows/: build_push.yaml  pull_request_qoc.yaml
api/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api.db
api/migrations/: 20231207180424_init.sql  20231207234014_sample-data.sql
api/src/: main.rs  server.rs
api/src/common/: mod.rs
api/src/common/config/: env.rs
api/src/common/errors/: database_errors.rs
api/src/common/middleware/: auth.rs
api/src/common/state/: app_state.rs
api/src/domains/: mod.rs
api/src/domains/health/: controller.rs
api/src/domains/questions/: handlers.rs  mod.rs  model.rs  schema.rs  service.rs
api/src/domains/scoreboard/: handlers.rs  mod.rs  model.rs  schema.rs  service.rs
mock/: server.json
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.css  App.tsx
web/src/components/: earth-scenes.tsx  quiz.css  quiz.tsx
web/src/home/: home.css  home.tsx
web/src/layouts/: header.css  header.tsx
