[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-valid = "0.11.0"
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive"] }
dotenvy = "0.15.7"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4", features = ["fs", "timeout", "trace", "cors"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
cargo-sort = "1.0.9"
pre-commit-hooks = "0.3.0"

[package.metadata.precommit]
fmt = "cargo fmt --all -- --check"
clippy = "cargo clippy --all -- --deny=warnings"
sort = "cargo sort"
